--- a/src/templates/pages/blog.pug
+++ b/src/templates/pages/blog.pug
@@ -1,24 +1,37 @@
 extends ../template
 
 block variables
-    - var title = 'Добро пожаловать'
+    - var title = 'Блог'
 
 block content
-    .main-block
-        .main-block__img    
-        h1.main-block__title Мария Молчанова
-        .main-block__text Личный сайт веб разработчика
-        div.main-block-socials.socials
+    .header
+        div.socials
             .socials__ico
             .socials__ico
             .socials__ico
-        nav.nav-block
-            ul.nav-block__list
-                li.nav-block__item Мои работы
-                li.nav-block__item Обо мне
-                li.nav-block__item Блог
-    .copyright
-        ul.copyright__list
-            li.copyright__item Мария Молчанова
-            li.copyright__item создано с любовью в LoftSchool
-            li.copyright__item 2018
+        .general-block
+            .general-block__img
+            h1.general-block__title.title Блог
+            .general-block__description Статьи, которые я написал
+        .hamburger
+
+    .container
+        .content.blog
+            ul.blog__list
+                li.blog__item
+                    .blog__title Самое важное в SASS
+                    .blog__data 22 ноября 2016
+                    .blog__desc
+                        .blog__desc-text
+                            p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.
+                            p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
+                        .blog__desc-snippet
+                li.blog__item
+                    .blog__title Приёмы в вёрстке, без которых не обходится ни один сайт
+                    .blog__data 13 ноября 2016
+                    .blog__desc
+                        .blog__desc-text
+                            p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.
+                            p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
+                        .blog__desc-snippet
+    
