first version of the assembly

--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -5,7 +5,8 @@ block variables
 
 block content
     .main-block
-        .main-block__img    
+        .main-block__img
+            img.main-block__pic(style="background-image: url(assets/images/photo.jpg);")    
         h1.main-block__title Мария Молчанова
         .main-block__text Личный сайт веб разработчика
         div.main-block-socials.socials
