--- a/src/templates/pages/about.pug
+++ b/src/templates/pages/about.pug
@@ -11,6 +11,7 @@ block content
             .socials__ico
         .general-block
             .general-block__img
+                img.general-block__pic(style="background-image: url(assets/images/photo.jpg);")
             h1.general-block__title Мария Молчанова
             .general-block__description Личный сайт веб разработчика
         .hamburger
@@ -25,64 +26,12 @@ block content
                     .block-about__img
                     h2.block-about__title
                     .block-about__desc
-                        p Я веб разработчик из Новосибирска. Мне 27 лет. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
-                        p Этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите,как тут всё классно и красиво!
+                        p Я веб разработчик из Новосибирска. Мне 27 лет. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
+                        p Этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
             .about__column
                 .block-about
-                    h2.block-about__title Чем я могу быть вам полезен
-                    .block-about__desc Больше всего меня привлекет Frontend разработка, но я также знаком и могу решать не сложные задачина Backend. Но давайте по порядку.
-                    ul.technologies
-                        li.technologies__item
-                            h3.technologies__title Frontend
-                            .diagram
-                                ul.diagram__list
-                                    li.diagram__item
-                                        .diagram__circle.diagram__circle--big
-                                            .diagram__circle.diagram__circle--small 
-                                                .diagram__text HTML5
-                                    li.diagram__item
-                                        .diagram__circle.diagram__circle--big
-                                            .diagram__circle.diagram__circle--small 
-                                                .diagram__text CSS3
-                                    li.diagram__item
-                                        .diagram__circle.diagram__circle--big
-                                            .diagram__circle.diagram__circle--small 
-                                                .diagram__text JavaScript &amp; jQuery
-                        li.technologies__item
-                            h3.technologies__title Backend
-                            .diagram
-                                ul.diagram__list
-                                    li.diagram__item
-                                        .diagram__circle.diagram__circle--big
-                                            .diagram__circle.diagram__circle--small 
-                                                .diagram__text PHP
-                                    li.diagram__item
-                                        .diagram__circle.diagram__circle--big
-                                            .diagram__circle.diagram__circle--small 
-                                                .diagram__text mySQL
-                                    li.diagram__item
-                                        .diagram__circle.diagram__circle--big
-                                            .diagram__circle.diagram__circle--small 
-                                                .diagram__text Node.js &amp; npm
-                                    li.diagram__item
-                                        .diagram__circle.diagram__circle--big
-                                            .diagram__circle.diagram__circle--small 
-                                                .diagram__text Mongo.db
-                        li.technologies__item
-                            h3.technologies__title WorkFlow
-                            .diagram
-                                ul.diagram__list
-                                    li.diagram__item
-                                        .diagram__circle.diagram__circle--big
-                                            .diagram__circle.diagram__circle--small 
-                                                .diagram__text Git
-                                    li.diagram__item
-                                        .diagram__circle.diagram__circle--big
-                                            .diagram__circle.diagram__circle--small 
-                                                .diagram__text Gulp
-                                    li.diagram__item
-                                        .diagram__circle.diagram__circle--big
-                                            .diagram__circle.diagram__circle--small 
-                                                .diagram__text Bower
+                    h2.block-about__title Чем я могу быть вам полезна
+                    .block-about__desc Больше всего меня привлекет Frontend разработка, но я также знакома и могу решать не сложные задачи на Backend. Но давайте по порядку.
+                    include ../common/technologies.pug
 
                     
