--- a/src/templates/template.pug
+++ b/src/templates/template.pug
@@ -9,6 +9,8 @@ html
         meta(content="" name="keywords")
         meta(content="width=device-width, initial-scale=1" name="viewport")
         meta(content="ie=edge" http-equiv="x-ua-compatible")
+        link(rel="stylesheet" href="/assets/styles/app.min.css")
 
     body
         block content
+        include common/menu.pug
