first version of the assembly

--- a/src/templates/common/menu.pug
+++ b/src/templates/common/menu.pug
@@ -2,10 +2,10 @@ h2 Меню
 nav.menu
     ul.menu__list
         li.menu__item
-            a(href="/index.html") Главная
+            a(href="index.html") Главная
         li.menu__item
-            a(href="/about.html") Обо мне
+            a(href="about.html") Обо мне
         li.menu__item
-            a(href="/my-works.html") Мои работы
+            a(href="my-works.html") Мои работы
         li.menu__item
-            a(href="/blog.html") Блог
+            a(href="blog.html") Блог
