first version of the assembly

--- a/src/templates/template.pug
+++ b/src/templates/template.pug
@@ -10,7 +10,7 @@ html
         meta(content="width=device-width, initial-scale=1" name="viewport")
         meta(content="ie=edge" http-equiv="x-ua-compatible")
         link(rel="stylesheet" href="/assets/styles/app.min.css")
-        script(src="bundle.js")
+        script(src="/assets/scripts/bundle.js" defer)
 
     body
         block content
