--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,3 +1,6 @@
 @import "node_modules/normalize.css/normalize";
+@import 'base.scss';
+@import 'fonts.scss';
+@import 'pages/index.scss';
 @import 'common/menu';
 @import 'common/technologies';
