--- a/src/styles/common/menu.scss
+++ b/src/styles/common/menu.scss
@@ -1,11 +1,7 @@
+// .menu {
+//     display: none;
+// }
+
 .menu__item {
     color: green;
-}
-
-.main-block__pic {
-    height: 150px;
-    width: 150px;
-    background-size: cover;
-    background-position: 50%, 50%;
-    border-radius: 50%;
 }
