--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -22,6 +22,8 @@ block content
                         a(href="./about.html") Обо мне
                     li.nav-block__item
                         a(href="./blog.html") Блог
+        .authorization
+            a.authorization__btn(href="#") Авторизоваться
         .copyright
             ul.copyright__list
                 li.copyright__item &copy; Владимир Астахов
