--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -1,7 +1,3 @@
-.wrapper + .menu{
-    display: none;
-}
-
 .wrapper {
     background-image: url('../images/sand.jpg');
     height: 100vh;
@@ -18,41 +14,18 @@
 
 .main-block {
     min-height: 395px;
-    width: 380px;
+    min-width: 380px;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     position: relative;
     background-color: rgba(#fff, .3);
     border-radius: 10px 10px 0 0;
 }
 
-.main-block__pic {
-    height: 142px;
-    width: 142px;
-    background-size: cover;
-    background-position: 50%, 50%;
-    border-radius: 50%;
-    margin-top: 40px;
-    margin-bottom: 10px;
-}
-
-.main-block__title {
-    font-weight: 500;
-    font-size: 28px;
-}
-
-.main-block__text {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-}
-
 .nav-block {
-    position: absolute;
-    bottom: 0;
-    // width: 100%;
-    // min-width: 100%;
+    width: 100%;
     max-width: 100%;
     background-color: #e7a831;
 }
@@ -61,6 +34,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: stretch;
 }
 
 .nav-block__item {
