--- a/src/templates/template.pug
+++ b/src/templates/template.pug
@@ -14,4 +14,5 @@ html
 
     body
         block content
-        include common/menu.pug
+        if title != 'Добро пожаловать'
+            include common/menu.pug
