--- a/src/templates/pages/about.pug
+++ b/src/templates/pages/about.pug
@@ -5,33 +5,38 @@ block variables
 
 block content
     .header
-        div.socials
-            .socials__ico
-            .socials__ico
-            .socials__ico
-        .general-block
-            .general-block__img
-                img.general-block__pic(style="background-image: url(assets/images/photo.jpg);")
-            h1.general-block__title Мария Молчанова
-            .general-block__description Личный сайт веб разработчика
-        .hamburger
-        .arrow
-
-    .container
-        .content.about
-            .about__column
-                .block-about
-                    h1.block-about__title.block-about__title--large Обо мне
-                .block-about
-                    .block-about__img
-                    h2.block-about__title
-                    .block-about__desc
-                        p Я веб разработчик из Новосибирска. Мне 27 лет. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
-                        p Этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
-            .about__column
-                .block-about
-                    h2.block-about__title Чем я могу быть вам полезна
-                    .block-about__desc Больше всего меня привлекет Frontend разработка, но я также знакома и могу решать не сложные задачи на Backend. Но давайте по порядку.
-                    include ../common/technologies.pug
+        .header__socials
+            include ../common/socials.pug        
+        .header__content
+            .header__user
+                include ../common/user.pug
+            svg.header__text(height="250")
+                    use(xlink:href="assets/images/sprite.svg#about_header")
+        button.header__hamburger.hamburger(type="button")
+            span.hamburger__block
+                span.hamburger-block__line
+                span.hamburger-block__line
+                span.hamburger-block__line
+        svg.header__arrow(width="25" height="15")
+            use(xlink:href="assets/images/sprite.svg#arrow_down")
+        svg.triangle(xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1000 85" preserveaspectratio="none")
+            polygon.triangle__left(points="0,0   0,86   500.8,86   500.8,75.5")
+            polygon.triangle__right(points="1000,0   1000,86   500,86   500,75.5")
+    .about
+        .about__column.about__column--left
+            .about__block
+                h1.about__title.title Обо мне
+            .about__block
+                .about__img 
+                    img.about__pic(style="background-image: url(assets/images/photo.jpg);")
+                h2.about__subtitle.subtitle Кто я
+                .about__desc
+                    p Я веб разработчик из Новосибирска. Мне 27 лет. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
+                    p Этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
+        .about__column.about__column--right
+            .about__block
+                h2.about__subtitle.subtitle Чем я могу быть вам полезна
+                .about__desc Больше всего меня привлекет Frontend разработка, но я также знакома и могу решать несложные задачи на Backend. Но давайте по порядку.
+                include ../common/technologies.pug
 
                     
