--- a/src/styles/common/user.scss
+++ b/src/styles/common/user.scss
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: #fff;
+    font-family: 'roboto';  
 }
 
 .user__pic {
