--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -6,9 +6,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    color: #fff;
-    font-family: 'roboto';  
+    align-items: center; 
     overflow: hidden; 
 }
 
@@ -24,10 +22,22 @@
     border-radius: 10px 10px 0 0;
 }
 
+.main-block__info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.main-block__user {
+    display: flex;
+    margin-bottom: 35px;
+}
+
 .nav-block {
     width: 100%;
     max-width: 100%;
-    background-color: #e7a831;
+    background-color: $yellow;
 }
 
 .nav-block__list {
@@ -45,13 +55,13 @@
         display: inline-block;
         text-decoration: none;
         color: #fff;
-        background-color: #e7a831;
+        background-color: $yellow;
         font: 400 16px 'roboto';
         padding: 11px 31px;
         height: 100%;
     }
     a:hover {
-        background-color: #cc8820;
+        background-color: $rust;
         transition: .5s;
     }
     &:first-child {
@@ -75,7 +85,7 @@
         border-radius: 5px;
         &:hover {
             background-color: #fff;
-            color: #cc8820;
+            color: $rust;
             transition: .5s;
         }
 }
@@ -83,6 +93,8 @@
 .copyright {
     position: absolute;
     bottom: 0;
+    color: #fff;
+    font: 400 16px 'roboto';
 }
 
 .copyright__list{
