--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -3,20 +3,7 @@
     z-index: 5; 
     display: flex;
     color: $dark;
-    height: 100vh;
-}
-
-.triangle{
-    position: absolute;
-    bottom: 0;
-}
-
-.triangle__left {
-    fill: $bg;
-}
-
-.triangle__right {
-    fill: $bg-beige;
+    height: 100%;
 }
 
 .about__column {
@@ -28,23 +15,27 @@
 .about__column--left {
     background-color: $bg;
     flex-basis: 50%;
-    height: 100%;
 }
 
 .about__column--right {
     background-color: $bg-beige;
-    height: 100%;
 }
 
 .about__block {
     display: flex;
     flex-direction: column;
     width: 100%;
+    padding: 0 2%;
+}
+
+.about__img {
+    width: 25vw;
+    max-height: 25vw;
+    overflow: hidden;
 }
 
 .about__pic {
     width: 100%;
-    height: 390px;
-    background-size: cover;
-    background-position: 50%, 50%;    
+    transform: translateY(-27%);
 }
+
