--- a/src/templates/common/user.pug
+++ b/src/templates/common/user.pug
@@ -1,5 +1,5 @@
 .user
     .user__img
-        img.user__pic(style="background-image: url(assets/images/photo.jpg);")    
+        img.user__pic(src="assets/images/photo.jpg")  
     h1.user__title Мария Молчанова
     .user__info Личный сайт веб разработчика
