--- a/src/templates/pages/my-works.pug
+++ b/src/templates/pages/my-works.pug
@@ -4,3 +4,73 @@ block variables
     - var title = 'Мои работы'
 
 block content
+    .header
+        .header__socials
+            include ../common/socials.pug        
+        .header__content
+            .header__user
+                include ../common/user.pug
+            svg.header__text(height="250")
+                    use(xlink:href="assets/images/sprite.svg#portfolio_header")
+        button.header__hamburger(type="button")
+            svg.hamburger__ico(height="40" width="40")
+                    use(xlink:href="assets/images/sprite.svg#hamburger")
+        svg.header__arrow(width="25" height="15")
+            use(xlink:href="assets/images/sprite.svg#arrow_down")
+        svg.triangle(xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1000 85" preserveaspectratio="none")
+            polygon.triangle__part(points="0,0   0,86   500.8,86   500.8,75.5")
+            polygon.triangle__part(points="1000,0   1000,86   500,86   500,75.5")
+
+    .works 
+        h1.works__title.title-dec Мои работы
+        svg.title-shaddow(height="250")
+            use(xlink:href="assets/images/sprite.svg#works_header")
+        .works__content
+            .works__block
+                h2.works__subtitle.subtitle-dec Сайт школы онлайн образования
+                .works__desc HTML, CSS, JAVASCRIPT
+                a.works__button(href="#") Посмотреть сайт
+            .works__main
+                .works__wrap
+                    .works__sub
+                    .works__sub
+
+    .my-block
+        h1.my-block__title.title-dec Что обо мне говорят
+        svg.title-shaddow.title-shaddow--grey(height="250")
+            use(xlink:href="assets/images/sprite.svg#about_header")
+        .reviews
+            ul.reviews__list
+                li.reviews__item
+                    .reviews__text
+                        p Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
+                    .reviews__author
+                        .reviews__avatar
+                            img.reviews__pic(src="assets/images/dima.jpg")
+                        .reviews__info
+                            .reviews__name Ковальчук Дмитрий
+                            .reviews__desc основатель Loftschool
+                li.reviews__item
+                    .reviews__text
+                        p Этот код выдержит любые испытания. Только пожалуйста, не загружайте сайт на слишком старых браузерах!
+                    .reviews__author
+                        .reviews__avatar
+                            img.reviews__pic(src="assets/images/vova.jpg")
+                        .reviews__info
+                            .reviews__name Сабанцев Владимир
+                            .reviews__desc преподаватель
+            .form
+                form.form__elem(action="server.php",method="post",id="contact-form")
+                    .form__wrap
+                        .form__content
+                            h2.form__subtitle.subtitle-dec Связаться со мной
+                            input.form__input(type="text" id="name" name="name" placeholder="Имя")
+                            input.form__input(type="email" id="email" name="email" placeholder="Email")
+                            textarea.form__input.form__textarea(name="comment" id="comment" placeholder="Ваше сообщение")
+                        .form__btns
+                            input.form__btn(type="submit" name="submit" value="Отправить")
+                            input.form__btn(type="reset" name="reset" value="Очистить")
+
+
+
+
