--- a/src/styles/common/user.scss
+++ b/src/styles/common/user.scss
@@ -6,19 +6,28 @@
     font-family: 'roboto';  
 }
 
-.user__pic {
+.user__img {
     height: 142px;
     width: 142px;
-    background-size: cover;
-    background-position: 50%, 50%;
+    overflow: hidden;  
     border-radius: 50%;
     margin-top: 40px;
     margin-bottom: 10px;
 }
 
+.user__pic {
+    width: 100%;
+    transform: translateY(-13%);
+}
+
 .user__title {
     font-weight: 500;
     font-size: 28px;
+
+    &--blog {
+        font: 500 63px 'sansus_webissimo';
+        margin: 0;
+    }
 }
 
 .user__info {
