--- a/src/templates/pages/blog.pug
+++ b/src/templates/pages/blog.pug
@@ -2,36 +2,52 @@ extends ../template
 
 block variables
     - var title = 'Блог'
+    - var navBlog = ['Самое важное в SASS', 'Приёмы в вёрстке, без которых не обходится ни один сайт', 'Самый необходимый набор Gulp плагинов', 'Почему я выбрал Jade']
 
 block content
-    .header
-        div.socials
-            .socials__ico
-            .socials__ico
-            .socials__ico
-        .general-block
-            .general-block__img
-            h1.general-block__title.title Блог
-            .general-block__description Статьи, которые я написал
-        .hamburger
+    .header.header--min
+        .header__socials
+            include ../common/socials.pug        
+        .header__content.header__content--min
+            .header__user
+                .user
+                    .user__img
+                        img.user__pic(src="assets/images/photo.jpg")  
+                    h1.user__title--blog.title-dec Блог
+                    .user__info Статьи, которые я написала (на самом деле нет)
+            svg.header__text.header__text--min(height="250")
+                    use(xlink:href="assets/images/sprite.svg#blog_header")
+        button.header__hamburger(type="button")
+            svg.hamburger__ico(height="40" width="40")
+                    use(xlink:href="assets/images/sprite.svg#hamburger")
+        svg.triangle(xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1000 85" preserveaspectratio="none")
+            polygon.triangle__part(points="0,0   0,86   500.8,86   500.8,75.5")
+            polygon.triangle__part(points="1000,0   1000,86   500,86   500,75.5")
 
-    .container
-        .content.blog
+    .blog
+        .blog__nav.nav-blog
+            ul.nav-blog__list
+                each item in navBlog
+                            li.nav-blog__item
+                                a.nav-blog__link(href="") #{item}
+        .blog__content
             ul.blog__list
                 li.blog__item
-                    .blog__title Самое важное в SASS
+                    h2.blog__title.subtitle Самое важное в SASS
                     .blog__data 22 ноября 2016
                     .blog__desc
                         .blog__desc-text
                             p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.
                             p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
                         .blog__desc-snippet
+                            img.blog__desc-img(src="assets/images/snippet.jpg")
                 li.blog__item
-                    .blog__title Приёмы в вёрстке, без которых не обходится ни один сайт
+                    h2.blog__title.subtitle Приёмы в вёрстке, без которых не обходится ни один сайт
                     .blog__data 13 ноября 2016
                     .blog__desc
                         .blog__desc-text
                             p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.
                             p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
-                        .blog__desc-snippet
+
+
     
