--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -39,3 +39,10 @@
     transform: translateY(-27%);
 }
 
+.map {
+    &:after {
+        content: "";
+        display: block;
+        height: 145px;
+    } 
+}
