--- a/src/templates/pages/about.pug
+++ b/src/templates/pages/about.pug
@@ -15,7 +15,7 @@ block content
         button.header__hamburger(type="button")
             svg.hamburger__ico(height="40" width="40")
                     use(xlink:href="assets/images/sprite.svg#hamburger")
-        svg.header__arrow(width="25" height="15")
+        svg.arrow.header__arrow(width="25" height="15")
             use(xlink:href="assets/images/sprite.svg#arrow_down")
         svg.triangle(xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1000 85" preserveaspectratio="none")
             polygon.triangle__part(points="0,0   0,86   500.8,86   500.8,75.5")
@@ -37,6 +37,5 @@ block content
                 .about__desc Больше всего меня привлекет Frontend разработка, но я также знакома и могу решать несложные задачи на Backend. Но давайте по порядку.
                 include ../common/technologies.pug
     .map
-    .footer
 
                     
