--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -22,4 +22,5 @@
 @import 'common/user';
 @import 'common/socials';
 @import 'common/header';
+@import 'common/footer';
 @import 'common/technologies';
