--- a/src/styles/common/header.scss
+++ b/src/styles/common/header.scss
@@ -33,7 +33,7 @@
 }
 
 .header__text {
-  @include shaddow-text(0);
+  @include shaddow-text(0, 0);
   top: 15%;
 
   &--min {
@@ -66,19 +66,10 @@
 }
 
 .header__arrow {
-  fill: #fff;
   position: absolute;
   bottom: 80px;
   left: 50%;
-  transform: translate(-50%, -50%);
-  fill-opacity: 0.3;
   z-index: 10;
-
-  &:hover {
-      transition: .5s;
-      fill-opacity: 1;
-      cursor: pointer;
-  }
 }
 
 .triangle{
