--- a/src/styles/pages/my-works.scss
+++ b/src/styles/pages/my-works.scss
@@ -15,6 +15,7 @@
     height: 100%;
     display: flex;
     flex-direction: row;
+    min-height: 750px;
 }
 
 .works__block {
@@ -24,6 +25,14 @@
     justify-content: center;
     align-items: center;
     background-color: $bg-beige;
+}
+
+.works__main {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .works__desc {
@@ -64,9 +73,20 @@
     background-size: cover;
     display: flex;
     flex-direction: column;
+    align-items: center;
     color: $dark;
     height: 100%;
     overflow: hidden;
+    
+  &:after {
+    content: "";
+    display: block;
+    height: 145px;
+  } 
+}
+
+.my-block__title {
+    max-width: 500px;
 }
 
 .reviews {
@@ -75,6 +95,7 @@
     flex-direction: column;
     align-items: center;
 }
+
 .reviews__list {
     display: flex;
     justify-content: center;
@@ -84,11 +105,43 @@
     max-width: 370px;
 }
 
+.reviews__text {
+    font: 300 16px 'roboto';
+}
+
+.reviews__author {
+    display: flex;
+}
+
+.reviews__avatar {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.reviews__info {
+    color: $rust;
+    font: 400 16px 'roboto';
+}
+
+.reviews__name {
+    font: 700 16px 'roboto';
+}
+
+.reviews__pic--first {
+    transform: translate(0, -10px);
+}
+
 .form__wrap {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     height: 440px;
+    background-color: rgba(#fff, .15);
+    border-radius: 5px;
+    overflow: hidden;
 }
 
 .form__content {
@@ -114,4 +167,34 @@
 .form__textarea {
     height: 110px;
     resize: none;
-  }
+}
+
+.form__btns {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+    width: 100%;
+}
+
+.form__btn {
+    border: 0px;
+    border-left: 2px solid #fff; 
+    flex: 1 1 auto;
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    background-color: $yellow;
+    font: 500 16px 'roboto';
+    padding: 11px 31px;
+    height: 100%;
+
+    &:hover {
+        background-color: $rust;
+        transition: .5s;
+        cursor: pointer;
+    }
+    &:first-child {
+        border: 0px;
+    }
+}
