--- a/src/templates/pages/blog.pug
+++ b/src/templates/pages/blog.pug
@@ -24,30 +24,31 @@ block content
             polygon.triangle__part(points="0,0   0,86   500.8,86   500.8,75.5")
             polygon.triangle__part(points="1000,0   1000,86   500,86   500,75.5")
 
-    .blog
-        .blog__nav.nav-blog
-            ul.nav-blog__list
-                each item in navBlog
-                            li.nav-blog__item
-                                a.nav-blog__link(href="") #{item}
-        .blog__content
-            ul.blog__list
-                li.blog__item
-                    h2.blog__title.subtitle Самое важное в SASS
-                    .blog__data 22 ноября 2016
-                    .blog__desc
-                        .blog__desc-text
-                            p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.
-                            p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
-                        .blog__desc-snippet
-                            img.blog__desc-img(src="assets/images/snippet.jpg")
-                li.blog__item
-                    h2.blog__title.subtitle Приёмы в вёрстке, без которых не обходится ни один сайт
-                    .blog__data 13 ноября 2016
-                    .blog__desc
-                        .blog__desc-text
-                            p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.
-                            p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
+    .blog__wrap
+        .blog
+            .blog__nav.nav-blog
+                ul.nav-blog__list
+                    each item in navBlog
+                                li.nav-blog__item
+                                    a.nav-blog__link(href="") #{item}
+            .blog__content
+                ul.blog__list
+                    li.blog__item
+                        h2.blog__title.subtitle Самое важное в SASS
+                        .blog__data 22 ноября 2016
+                        .blog__desc
+                            .blog__desc-text
+                                p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.
+                                p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
+                            .blog__desc-snippet
+                                img.blog__desc-img(src="assets/images/snippet.jpg")
+                    li.blog__item
+                        h2.blog__title.subtitle Приёмы в вёрстке, без которых не обходится ни один сайт
+                        .blog__data 13 ноября 2016
+                        .blog__desc
+                            .blog__desc-text
+                                p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.
+                                p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
 
 
     
