--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -23,4 +23,5 @@
 @import 'common/socials';
 @import 'common/header';
 @import 'common/footer';
+@import 'common/map';
 @import 'common/technologies';
