--- a/src/templates/common/technologies.pug
+++ b/src/templates/common/technologies.pug
@@ -4,50 +4,60 @@ ul.technologies
         .diagram
             ul.diagram__list
                 li.diagram__item
-                    .diagram__circle.diagram__circle--big
-                        .diagram__circle.diagram__circle--small 
-                            .diagram__text HTML5
+                    svg.diagram__circle-block(viewBox="0 0 110 110")
+                        circle.diagram__circle-first(r="45" cx="50%" cy="50%" fill="none")
+                        circle.diagram__circle-second.circle-90(r="45" cx="50%" cy="50%" transform="rotate(-90 55 55)")
+                    span.diagram__text HTML5
                 li.diagram__item
-                    .diagram__circle.diagram__circle--big
-                        .diagram__circle.diagram__circle--small 
-                            .diagram__text CSS3
+                    svg.diagram__circle-block(viewBox="0 0 110 110")
+                        circle.diagram__circle-first(r="45" cx="50%" cy="50%" fill="none")
+                        circle.diagram__circle-second.circle-90(r="45" cx="50%" cy="50%" transform="rotate(-90 55 55)")
+                    span.diagram__text CSS3
                 li.diagram__item
-                    .diagram__circle.diagram__circle--big
-                        .diagram__circle.diagram__circle--small 
-                            .diagram__text JavaScript &amp; jQuery
+                    svg.diagram__circle-block(viewBox="0 0 110 110")
+                        circle.diagram__circle-first(r="45" cx="50%" cy="50%" fill="none")
+                        circle.diagram__circle-second.circle-90(r="45" cx="50%" cy="50%" transform="rotate(-90 55 55)")
+                    span.diagram__text JavaScript &amp; jQuery
     li.technologies__item
         h3.technologies__title Backend
         .diagram
             ul.diagram__list
                 li.diagram__item
-                    .diagram__circle.diagram__circle--big
-                        .diagram__circle.diagram__circle--small 
-                            .diagram__text PHP
+                    svg.diagram__circle-block(viewBox="0 0 110 110")
+                        circle.diagram__circle-first(r="45" cx="50%" cy="50%" fill="none")
+                        circle.diagram__circle-second.circle-90(r="45" cx="50%" cy="50%" transform="rotate(-90 55 55)")
+                    span.diagram__text PHP
                 li.diagram__item
-                    .diagram__circle.diagram__circle--big
-                        .diagram__circle.diagram__circle--small 
-                            .diagram__text mySQL
+                    svg.diagram__circle-block(viewBox="0 0 110 110")
+                        circle.diagram__circle-first(r="45" cx="50%" cy="50%" fill="none")
+                        circle.diagram__circle-second.circle-90(r="45" cx="50%" cy="50%" transform="rotate(-90 55 55)")
+                    span.diagram__text mySQL
                 li.diagram__item
-                    .diagram__circle.diagram__circle--big
-                        .diagram__circle.diagram__circle--small 
-                            .diagram__text Node.js &amp; npm
+                    svg.diagram__circle-block(viewBox="0 0 110 110")
+                        circle.diagram__circle-first(r="45" cx="50%" cy="50%" fill="none")
+                        circle.diagram__circle-second.circle-90(r="45" cx="50%" cy="50%" transform="rotate(-90 55 55)")
+                    span.diagram__text Node.js &amp; npm
                 li.diagram__item
-                    .diagram__circle.diagram__circle--big
-                        .diagram__circle.diagram__circle--small 
-                            .diagram__text Mongo.db
+                    svg.diagram__circle-block(viewBox="0 0 110 110")
+                        circle.diagram__circle-first(r="45" cx="50%" cy="50%" fill="none")
+                        circle.diagram__circle-second.circle-90(r="45" cx="50%" cy="50%" transform="rotate(-90 55 55)")
+                    span.diagram__text Mongo.db
     li.technologies__item
         h3.technologies__title WorkFlow
         .diagram
             ul.diagram__list
                 li.diagram__item
-                    .diagram__circle.diagram__circle--big
-                        .diagram__circle.diagram__circle--small 
-                            .diagram__text Git
+                    svg.diagram__circle-block(viewBox="0 0 110 110")
+                        circle.diagram__circle-first(r="45" cx="50%" cy="50%" fill="none")
+                        circle.diagram__circle-second.circle-90(r="45" cx="50%" cy="50%" transform="rotate(-90 55 55)")
+                    span.diagram__text Git
                 li.diagram__item
-                    .diagram__circle.diagram__circle--big
-                        .diagram__circle.diagram__circle--small 
-                            .diagram__text Gulp
+                    svg.diagram__circle-block(viewBox="0 0 110 110")
+                        circle.diagram__circle-first(r="45" cx="50%" cy="50%" fill="none")
+                        circle.diagram__circle-second.circle-90(r="45" cx="50%" cy="50%" transform="rotate(-90 55 55)")
+                    span.diagram__text Gulp
                 li.diagram__item
-                    .diagram__circle.diagram__circle--big
-                        .diagram__circle.diagram__circle--small 
-                            .diagram__text Bower
+                    svg.diagram__circle-block(viewBox="0 0 110 110")
+                        circle.diagram__circle-first(r="45" cx="50%" cy="50%" fill="none")
+                        circle.diagram__circle-second.circle-90(r="45" cx="50%" cy="50%" transform="rotate(-90 55 55)")
+                    span.diagram__text Bower
