--- a/src/styles/common/footer.scss
+++ b/src/styles/common/footer.scss
@@ -5,4 +5,65 @@
     display: flex;
     position: absolute;
     bottom: 0;
+    color: $light-grey;
+    font: 300 16px 'roboto';
+}
+
+.footer__column {
+    display: flex;
+    align-items: center;
+    width: 33.3%;
+    justify-content: space-between;
+
+    &:first-child .footer__content {
+        border: none;
+    }    
+}
+
+.footer__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100px;
+    border-left: 1px solid $light-grey;
+    margin: 25px 0;
+    padding: 0 30px;
+    width: 400px;
+    max-width: 100%;
+}
+
+.footer__nav-list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer__nav-item {
+    a {
+        text-decoration: none;
+        color: #fff;
+        font: 500 16px 'roboto';
+    }
+    a:hover {
+        text-decoration: underline;
+    }
+
+}
+
+.footer__text {
+
+
+    &--white {
+        color: #fff;
+    }
+}
+.footer__socials {
+    .socials__icon {
+        fill: $light-grey; 
+
+        &:hover {
+            transition: .5s;
+            fill: #fff; 
+            cursor: pointer;
+        }
+    }
 }
