--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -9,12 +9,12 @@
 .about__column {
     width: 50%;
     display: flex;
-    height: 100%;
+    // height: 100%;
 }
 
 .about__column--left {
     background-color: $bg;
-    flex-basis: 50%;
+
 }
 
 .about__column--right {
